# shell_helper

./: .gitmodules  CMakeLists.txt  README.md
src/: CurrentDateTask.cpp  CurrentDateTask.hpp  ReplacerTask.cpp  ReplacerTask.hpp  ShellHelperException.hpp  StartProcessTask.cpp  StartProcessTask.hpp  TCPConnectTask.cpp  TCPConnectTask.hpp  UUIDTask.cpp  UUIDTask.hpp  main.cpp
test/: CMakeLists.txt  CurrentDateTask_test.cpp  ReplacerTask_test.cpp  StartProcessTask_test.cpp  TCPConnectTask_test.cpp  UUIDTask_test.cpp
